@@ -9,5 +9,7 @@
 </head>
 <body>
 <h1>Assets</h1>
+<p><img src="blank.jpg" alt="blank"><br>
+<img src="nonexisting.png" alt="non existing"></p>
 </body>
 </html>
