@@ -1,2 +1,5 @@
 Assets
 ======
+
+![blank](blank.jpg)
+![non existing](nonexisting.png)
